UI Overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,7 @@ body {
   background-color: var(--light);
 }
 
+main {
+  width: 100vh;
+  overflow: hidden;
+}
